--- a/CSS/register.css
+++ b/CSS/register.css
@@ -25,6 +25,7 @@ body {
   border: 1px solid #00b4d8;
   border-radius: 3px;
   margin-bottom: 15px;
+  outline: none;
 }
 
 .register input::placeholder {
