--- a/CSS/welcome.css
+++ b/CSS/welcome.css
@@ -6,8 +6,37 @@
   font-family: "Truculenta", sans-serif;
 }
 
-body {
+.responsiveNav {
+  width: 100%;
+  display: none;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  z-index: 1;
+  background-color: #ffffff;
+  padding-top: 35px;
+  padding-bottom: 35px;
 }
+
+.responsiveNav button {
+}
+.responsiveNav ul {
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 30px;
+}
+
+.responsiveNav ul li a {
+  text-decoration: none;
+  color: #000;
+}
+
+.responsiveNav ul li a:hover {
+  color: #00b4d8;
+}
+
 
 nav {
   background: transparent;
@@ -85,109 +114,33 @@ nav img {
   font-size: 18px;
 }
 
-.container {
+
+.item {
   position: relative;
-  
-  height: 80vh;
-
-
-}
-
-
-.container .slide .item {
-  width: 20%;
-  height: 20%;
-  position: absolute;
-  top: 50%;
-  transform: translate(0.5%);
-  background-position: center;
+  width: 100%;
+  height: 100vh;
   background-size: cover;
-  display: inline-block;
-  transition: 0.5s;
+  background-position: center;
 }
 
-.slide .item:nth-child(1),
-.slide .item:nth-child(2) {
-  top: 0;
-  left: 0;
-  transform: translate(0, 0);
-  border-radius: 0;
-  width: 100%;
-  height: 100%;
-}
-
-.slide .item:nth-child(3) {
-  left: 50%;
-  display: none;
-}
-.slide .item:nth-child(4) {
-  left: calc(50% + 220px);
-  display: none;
-}
-.slide .item:nth-child(5) {
-  left: calc(50% + 440px);
-  display: none;
-}
-
-.item .overlay {
+.overlay {
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: rgba(0, 0, 0, 0.5); /* Adjust the opacity here */
+}
+
+.content {
+  position: absolute;
+  bottom: 20px; /* Adjust as needed */
+  left: 20px; /* Adjust as needed */
+  color: #fff; /* Adjust the text color */
   z-index: 1;
 }
 
-.item .content {
-  position: absolute;
-  top: 50%;
-  left: 100px;
-  transform: translateY(-50%);
-  color: #eee;
-  z-index: 2;
-}
 
-.item .content {
-  position: absolute;
-  top: 50%;
-  left: 100px;
-  width: 300px;
-  text-align: left;
-  color: #eee;
-  transform: translate(0, 50%);
-  display: none;
-}
-
-.slide .item:nth-child(2) .content {
-  display: block;
-}
-
-.content .name {
-  font-size: 40px;
-  text-transform: uppercase;
-  font-weight: bold;
-  opacity: 0;
-  animation: animate 1s ease-in-out 1 forwards;
-}
-
-.content .desc {
-  margin-top: 10px;
-  margin-bottom: 20px;
-  opacity: 0;
-  animation: animate 1s ease-in-out 1 forwards;
-}
-
-.content button {
-  padding: 10px 20px;
-  color: #fff;
-  font-size: 18px;
-  background-color: #00b4d8;
-  border: none;
-  cursor: pointer;
-  opacity: 0;
-  animation: animate 1s ease-in-out 0.6s 1 forwards;
-}
 
 @keyframes animate {
   from {
@@ -205,7 +158,7 @@ nav img {
   width: 100%;
   text-align: center;
   position: absolute;
-  bottom: 20px;
+  bottom: -40px;
 }
 
 .button button {
@@ -216,13 +169,39 @@ nav img {
   outline: none;
   cursor: pointer;
   margin: 0 8px;
-
   transition: 0.3s;
 }
 
 .button button:hover {
   background: #00b4d8;
   color: #fff;
+}
+
+.name{
+  font-size: 44px;
+  font-weight: 900;
+}
+
+.desc{
+  font-size: 24px;
+
+}
+
+.content{
+  top: 55%;
+  animation:  animate 0.8s 1 ;
+}
+
+.content button{
+
+  width: fit-content;
+  background: #00b4d8;
+  color: #fff;
+  padding: 5px 20px;
+  outline: none;
+  border: none;margin-top: 20px;
+  cursor: pointer;
+  font-size: 17px;
 }
 
 footer {
