--- a/CSS/profile.css
+++ b/CSS/profile.css
@@ -34,13 +34,13 @@
 }
 
 .responsiveNav ul li a:hover {
-  color: #00b4d8;
+  color: #4a90e2;
 }
 
 .background {
   width: 800px;
   height: 800px;
-  background-color: #00b4d8;
+  background-color: #4a90e2;
   position: absolute;
   border-radius: 50%;
   top: -500px;
@@ -67,7 +67,6 @@ nav {
   display: none;
 }
 
-
 nav ul {
   display: flex;
   gap: 40px;
@@ -82,7 +81,7 @@ nav ul li a {
 }
 
 nav ul li a:hover {
-  color: #00b4d8;
+  color: #4a90e2;
   transition: all ease-in-out 0.6s;
 }
 
@@ -91,7 +90,7 @@ nav ul li a::after {
   width: 0;
   height: 2px;
   position: absolute;
-  background: #00b4d8;
+  background: #4a90e2;
 }
 
 nav ul li a:hover::after {
@@ -113,6 +112,7 @@ nav img {
   justify-content: center;
   align-items: center;
 }
+
 .fa-solid {
   font-size: 22px;
 }
@@ -130,7 +130,7 @@ nav img {
   border-radius: 9px;
   display: flex;
   flex-direction: column;
-  background: #00b4d8;
+  background: #4a90e2;
   width: 300px;
   height: 70vh;
   justify-content: center;
@@ -144,15 +144,15 @@ nav img {
   gap: 30px;
 }
 
-.content button{
-    width: fit-content;
-    padding: 5px 10px;
-    margin: auto;
-    background: #fff;
-    border: 1px solid #fff;
-    color: #00b4d8;
-    cursor: pointer;
-    font-size: 16px;
+.content button {
+  width: fit-content;
+  padding: 5px 10px;
+  margin: auto;
+  background: #fff;
+  border: 1px solid #fff;
+  color: #4a90e2;
+  cursor: pointer;
+  font-size: 16px;
 }
 
 .profileContainer .content img {
@@ -233,7 +233,6 @@ nav img {
 
   .menu {
     display: block;
- 
   }
 
   footer {
@@ -251,7 +250,6 @@ nav img {
     height: 50px;
     margin-left: 10px;
   }
-
 
   .footerRight ul {
     gap: 20px;
